complete ProductDb without ACID transactions